macros/tests/ui/no_command_handlers.rs
use sails_macros::command_handlers;

#[command_handlers]
mod commands {}

fn main() {}
